--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.3.2",
-    "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
@@ -20,10 +18,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scroll": "^1.8.9",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "tailwindcss": "3.3.2"
   },
   "devDependencies": {
-    "@types/react-scroll": "^1.8.7"
+    "@types/node": "20.6.3",
+    "@types/react": "18.2.22",
+    "@types/react-scroll": "^1.8.7",
+    "typescript": "^5.2.2"
   }
 }
